mssql/ingressroute-mssql.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mssql-ingress
spec:
  entryPoints:
    - mssql
  routes:
  - match: HostSNI(`*`)
    services:
    - name: sql-server
      port: 1433
